# flowly

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/flowly-codec/: Cargo.toml
crates/flowly-codec/src/: lib.rs
crates/flowly-core/: Cargo.toml
crates/flowly-core/src/: chunked.rs  codec.rs  either.rs  error.rs  fourcc.rs  frame.rs  lib.rs  memory.rs  void.rs
crates/flowly-io/: Cargo.toml
crates/flowly-io/examples/: dir.rs
crates/flowly-io/src/: error.rs  file.rs  lib.rs
crates/flowly-kafka/: Cargo.toml
crates/flowly-mux/: Cargo.toml
crates/flowly-mux/examples/: mpeg2ts.rs
crates/flowly-mux/src/mpeg2ts/: demux.rs  mod.rs
crates/flowly-service/: Cargo.toml
crates/flowly-service/src/: and_then.rs  concurrent_each.rs  except.rs  filter.rs  finally.rs  flatten.rs  inspect.rs  lib.rs  map.rs  maybe.rs  pass.rs  scope.rs  spawn.rs  spawn_each.rs  stub.rs  switch.rs
crates/flowly-slicer/: Cargo.toml
crates/flowly-slicer/src/: lib.rs
crates/flowly-spsc/: Cargo.toml
crates/flowly-spsc/examples/: simple.rs
crates/flowly-spsc/src/: atomic_waker.rs  error.rs  lib.rs
crates/flowy-codec/: Cargo.toml
crates/flowy-codec/src/: lib.rs
crates/flowy-core/: Cargo.toml
crates/flowy-core/src/: frame.rs  lib.rs
crates/flowy-kafka/: Cargo.toml
crates/flowy-mux/: Cargo.toml
crates/flowy-mux/examples/: mpeg2ts.rs
crates/flowy-mux/src/: lib.rs
crates/flowy-mux/src/mpeg2ts/: mod.rs
crates/flowy-service/: Cargo.toml
crates/flowy-service/src/: abort.rs  finally.rs  map.rs
crates/flowy-slicer/: Cargo.toml
crates/flowy-slicer/src/: lib.rs
examples/: concurrent_each.rs  demo.rs  inspect.rs  scope.rs  spawn_each.rs
src/: frame.rs  lib.rs  memory.rs  slicer.rs
src/pipe/: chain.rs  flatten.rs  mod.rs  optional.rs  pass.rs  spawn.rs  stub.rs
