[package]
name = "flowly"
version = "0.1.0"
edition = "2024"
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andreytkachenko/flowly"
homepage = "https://github.com/andreytkachenko/flowly"
description = """
Flowly is a library of modular and reusable components for building robust
pipelines processing audio, video and other.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["pipeline", "async",  "machine-learning", "audio", "video"]

[workspace]
members = [
  "crates/flowy-service",
  "crates/flowy-core",
  "crates/flowy-codec",
  "crates/flowy-mux",
  "crates/flowy-slicer",
  "crates/flowy-kafka"
]

[workspace.dependencies]
flowy-core = { path = "./crates/flowy-core" }
flowy-service = { path = "./crates/flowy-service" }
flowy-mux = { path = "./crates/flowy-mux" }
flowy-codec = { path = "./crates/flowy-codec" }
flowy-kafka = { path = "./crates/flowy-kafka" }
flowy-slicer = { path = "./crates/flowy-slicer" }

async-stream = "0.3.6"
bitflags = "2.9.1"
bytes = "1.10.1"
futures = "0.3.31"
stream-cancel = "0.8.2"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["sync", "rt-multi-thread"] }

[dependencies]
flowy-core = { workspace = true }
flowy-service = { workspace = true }
flowy-mux = { workspace = true }
flowy-codec = { workspace = true }
flowy-kafka = { workspace = true }
flowy-slicer = { workspace = true }

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }
