[package]
name = "flowly"
version = "0.1.0"
edition = "2024"
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andreytkachenko/flowly"
homepage = "https://github.com/andreytkachenko/flowly"
description = """
Flowly is a library of modular and reusable components for building robust
pipelines processing audio, video and other.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["pipeline", "async",  "machine-learning", "audio", "video"]

[workspace]
members = [
  "crates/flowly-service",
  "crates/flowly-core",
  "crates/flowly-codec",
  "crates/flowly-mux",
  "crates/flowly-slicer",
  "crates/flowly-kafka",
  "crates/flowly-io"
]

[workspace.dependencies]
flowly-core = { path = "./crates/flowly-core" }
flowly-service = { path = "./crates/flowly-service" }
flowly-io = { path = "./crates/flowly-io" }
flowly-mux = { path = "./crates/flowly-mux" }
flowly-codec = { path = "./crates/flowly-codec" }
flowly-kafka = { path = "./crates/flowly-kafka" }
flowly-slicer = { path = "./crates/flowly-slicer" }

async-stream = "0.3.6"
bitflags = "2.9.1"
bytes = "1.10.1"
futures = "0.3.31"
stream-cancel = "0.8.2"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["sync", "rt-multi-thread"] }

[dependencies]
flowly-core.workspace = true
flowly-service.workspace = true
flowly-mux = { workspace = true }
flowly-codec = { workspace = true }
flowly-kafka = { workspace = true }
flowly-slicer = { workspace = true }
flowly-io = { workspace = true }
futures.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }
