[package]
name = "flowly"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[workspace.package]
version = "0.2.7"
edition = "2024"
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/flowly-team/flowly"
homepage = "https://github.com/flowly-team/flowly"
description = """
Flowly is a library of modular and reusable components for building robust
pipelines processing audio, video and other.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["pipeline", "async",  "machine-learning", "audio", "video"]

[workspace]
members = [
  "crates/flowly-service",
  "crates/flowly-core",
  "crates/flowly-io",
  "crates/flowly-spsc"
]

[workspace.dependencies]
flowly-core = { version = "0.2.0", path = "./crates/flowly-core" }
flowly-service = { version = "0.2.0", path = "./crates/flowly-service" }
flowly-io = { version = "0.2.0", path = "./crates/flowly-io" }
flowly-spsc = { version = "0.2.0", path = "./crates/flowly-spsc" }

async-stream = "0.3.6"
bitflags = "2.9.1"
bytes = "1.10.1"
futures = "0.3.31"
stream-cancel = "0.8.2"
thiserror = "2.0"
log = "0.4"
tokio = { version = "1.45.0", features = ["sync", "rt-multi-thread"] }

[dependencies]
flowly-core.workspace = true
flowly-service.workspace = true
flowly-io = { workspace = true }
flowly-spsc = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
async-stream.workspace = true
tokio = { version = "1.45.0", features = ["full"] }
