[package]
name = "flowly-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
arrayvec = "0.7.6"
bitflags = { workspace = true }
bytes = { workspace = true }
futures.workspace = true
thiserror = { workspace = true }
