[package]
name = "flowly-io"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
async-stream = { workspace = true }
bytes = { workspace = true }
flowly-core = { workspace = true }
flowly-service = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
glob = "0.3.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
