[package]
name = "flowly-service"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
async-stream = { workspace = true }
futures = { workspace = true }
stream-cancel = { workspace = true }
tokio = { workspace = true }
