[package]
name = "flowly-service"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
flowly-spsc = { workspace = true }
flowly-core = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
stream-cancel = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }

