[package]
name = "flowly-spsc"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
atomic-waker = "1.1.2"
futures.workspace = true
parking_lot = "0.12.4"

[dev-dependencies]
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
