[package]
name = "flowy-mux"
version = "0.1.0"
edition = "2024"

[dependencies]
flowy-core = { workspace = true }
flowy-service = { workspace = true }
futures = { workspace = true }

mpeg2ts-reader = "0.18.2"
thiserror.workspace = true
async-stream.workspace = true
tokio.workspace = true
bytes.workspace = true

[dev-dependencies]
anyhow = "1.0.98"
tokio = { workspace = true, features = ["full"] }
